Add rest unit test